Fix font size, Wrap subheader inside header, Wrap logo inside a, Fix search text color

--- a/leapfrog/tutangle/css/layout.css
+++ b/leapfrog/tutangle/css/layout.css
@@ -4,7 +4,6 @@
 
 .header-section{
   background-color: #7dd9e8;
-  height: 85px;
 }
 
 .column-left{
